src/compiletest/tlcell-08.stderr
error[E0502]: cannot borrow `owner` as mutable because it is also borrowed as immutable
  --> $DIR/tlcell-08.rs:17:10
   |
16 |     let c1ref = owner.ro(&c1);
   |                 ----- immutable borrow occurs here
17 |     test(&mut owner);    // Compile error
   |          ^^^^^^^^^^ mutable borrow occurs here
18 |     println!("{}", *c1ref);
   |                    ------ immutable borrow later used here
